<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read QR code</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

    // main menu
    <string name="quiz">Quiz</string>
    <string name="informationImpl">General Information</string>

    // quiz
    //activity main
    <string name="btnClassic">Classic Quiz</string>
    <string name="btnTime">Time Trial</string>

    //activity result
    <string name="your_score">Your Score</string>

    //informationImpl
    <string name="main_des">Wat Umong  is a 700-year-old Buddhist temple in Chiang Mai, Thailand. The temple was built in 1297 by King Manglai of the Lan Na dynasty. Of particular interest is a replica of the Ashok Pillar similar to the one at Vaishali with four lions and a wheel at the base and an additional larger wheel on top that acts as an umbrella for the lions. A similar pillar is also available at Sarnath Museum. The four lion head is adopted as the National Emblem of India.\n \n Reference: Wat Umong. (2017, November 02). Retrieved November 22, 2017, from https://en.wikipedia.org/wiki/Wat_Umong</string>
    <string name="second_des">The entire Wat Umong complex consists of 37.5 rai (15 acres) of wooded grounds. You can feed the fish, turtles, and ducks in a large pond. "Talking trees" have words of wisdom in Thai and English. The wat is famous for its ancient tunnels and large stupa. There are tunnels with Buddhist images below the chedi which can be easily explored. These tunnels were supposedly built by the King and painted with bush scenes so they could keep a famous but mentally deranged monk within the grounds of the monastery as he had a habit of just wandering off into the bush for days on end. Signs (proverbs) written in English and Thai hang from the trees on footpaths leading to the small lake where fish, pigeons, and turtles can be fed. Other attractions include a Buddha field of broken sculpture, a fasting Bodhisattva, a Spiritual Theatre of paintings similar to those at Suan Mokkh, reproductions of ancient Buddhist sculpture of India, and a library-museum. This last building offers many books on Buddhism and other philosophies as well as a collection of historic objects and Buddhist art.\n \n Wat Umong. (2017, November 02). Retrieved November 22, 2017, from https://en.wikipedia.org/wiki/Wat_Umong</string>
    <string name="third_des"> 1) It is the only place in Thailand we found tunnels building intentionally as a Buddhist holy place. \n 2) Mural paintings at Wat Umong are among of the oldest paintings in the country.\n 3) The paintings are in the form of Wall Paper.</string>
    <string name="fourth_des">The painting was found in tunnels 1,2,3</string>
    <string name="fifth_des"> 1) Lotus \n 2) Cloud \n 3) Bird(Peacock,Chinese Phoenix,Parrot,Haron</string>
    <string name="six_des"> 1) Using paper tissue impregnated with ammonia solution over the painting surface makes the limestone layer over the painting softer. \n 2) The use of scalp slicing the limestone layer until seeing the pattern.</string>
    <string name="seven_des">X-ray powder diffraction (XRD) is a rapid analytical technique primarily used for phase identification of a crystalline material and can provide informationImpl on unit cell dimensions. The analyzed material is finely ground, homogenized, and average bulk composition is determined.\n\n Your Bibliography: Techniques. (2017). X-ray Powder Diffraction (XRD). [online] Available at: https://serc.carleton.edu/research_education/geochemsheets/techniques/XRD.html [Accessed 24 Nov. 2017].</string>
    <string name="eight_des">Energy-dispersive X-ray spectroscopy (EDS, EDX, EDXS or XEDS), sometimes called energy dispersive X-ray analysis (EDXA) or energy dispersive X-ray microanalysis (EDXMA), is an analytical technique used for the elemental analysis or chemical characterization of a sample. It relies on an interaction of some source of X-ray excitation and a sample. Its characterization capabilities are due in large part to the fundamental principle that each element has a unique atomic structure allowing a unique set of peaks on its electromagnetic emission spectrum (which is the main principle of spectroscopy). To stimulate the emission of characteristic X-rays from a specimen, a high-energy beam of charged particles such as electrons or protons , or a beam of X-rays, is focused into the sample being studied. At rest, an atom within the sample contains ground state (or unexcited) electrons in discrete energy levels or electron shells bound to the nucleus. The incident beam may excite an electron in an inner shell, ejecting it from the shell while creating an electron hole where the electron was. An electron from an outer, higher-energy shell then fills the hole, and the difference in energy between the higher-energy shell and the lower energy shell may be released in the form of an X-ray. The number and energy of the X-rays emitted from a specimen can be measured by an energy-dispersive spectrometer. As the energies of the X-rays are characteristic of the difference in energy between the two shells and of the atomic structure of the emitting element, EDS allows the elemental composition of the specimen to be measured.\n\n  Techniques. (2017). X-ray Powder Diffraction (XRD). [online] Available at: https://serc.carleton.edu/research_education/geochemsheets/techniques/XRD.html [Accessed 24 Nov. 2017].</string>
    <string name="nine_des"> Red Colour = Cinnabar \n Green Colour = Malachite \n Brown Colour = Cinnabar</string>
    <string name="ten_des"> 1) For the construction, tunnel builders did not take into account the accuracy of the direction and angle. \n 2) Each corner from the interaction between 2 tunnels is different. There are no right angle. </string>
    <string name="eleven_des"> 1) Better understanding on the construction of tunnels.
        \n 2) The importance of surveying.
        \n 3) Making 3D modelling
        \n 4) Restoration the tunnels
        \n 5) Creating a real-size tunnel model. (Part of Tunnel 2 within3-meter long.)
    </string>
</resources>
