<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.google.android.gms.samples.vision.barcodereader.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/barcode_header"
        android:id="@+id/status_message"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/read_barcode"
        android:id="@+id/read_barcode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:background="@color/red"
        android:textColor="@color/white"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>

    <Button
        android:text="@string/quiz"
        android:id="@+id/quiz"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35sp"
        android:background="@color/btnClassic"
        android:textColor="@color/white"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/read_barcode"/>

    <Button
        android:text="@string/information"
        android:id="@+id/information"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:background="@color/btnClassic"
        android:textColor="@color/white"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/quiz"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_focus"
        android:id="@+id/auto_focus"
        android:paddingLeft="25dp"
        android:layout_below="@id/read_barcode"
        android:layout_alignParentLeft="true"
        android:checked="false" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_flash"
        android:id="@+id/use_flash"
        android:paddingRight="25dp"
        android:layout_below="@id/read_barcode"
        android:layout_alignParentRight="true"
        android:checked="false" />

</RelativeLayout>
